--- a/styles.css
+++ b/styles.css
@@ -1,6 +1,6 @@
 body {
-    color: white;
-    background: black;
+    color: rgb(126, 150, 202);
+    background: rgb(199, 215, 247);
     margin: 0px;
     font-family: "Chakra Petch", sans-serif;
     margin-bottom: 100px;
@@ -10,7 +10,7 @@ header {
     border-bottom: solid 2px rgb(42, 122, 228);
     padding: 20px;
     font-size: 32px;
-    color: rgb(42, 122, 228);
+    color: rgb(126, );
 }
 
 .chamada {
