--- a/styles.css
+++ b/styles.css
@@ -7,7 +7,7 @@ body {
 }
 
 header {
-    border-bottom: solid 2px rgb(42, 122, 228);
+    border-bottom: solid 2px #D4E9F9;
     padding: 20px;
     font-size: 32px;
     color: rgb(126, 150, 202 );
